--- a/example-output/index.html
+++ b/example-output/index.html
@@ -140,7 +140,7 @@ pannb filtering.</p>
 converted to pandoc’s internal format.</p>
 <p>For example, the below table will be valid in LaTeX output.</p>
 </div>
-<div class="cell code docutils container">
+<div class="docutils container">
 <div class="docutils container">
 <table class="docutils align-default">
 <colgroup>
@@ -191,7 +191,7 @@ converted to pandoc’s internal format.</p>
     </p>
     <p>
         &copy; Copyright 2021, Kolen Cheung.<br/>
-      Last updated on Sep 22, 2021.<br/>
+      Last updated on Sep 23, 2021.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.5.4.<br/>
     </p>
   </div>
