--- a/genindex/index.html
+++ b/genindex/index.html
@@ -188,6 +188,10 @@
       <li><a href="../api/pannb/#pannb.remove_cell_input_python">remove_cell_input_python() (in module pannb)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="../api/pannb/#pannb.remove_code_cell_classes">remove_code_cell_classes() (in module pannb)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="S">S</h2>
@@ -220,7 +224,7 @@
     </p>
     <p>
         &copy; Copyright 2021, Kolen Cheung.<br/>
-      Last updated on Sep 22, 2021.<br/>
+      Last updated on Sep 23, 2021.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.5.4.<br/>
     </p>
   </div>
