--- a/_modules/pannb/index.html
+++ b/_modules/pannb/index.html
@@ -139,6 +139,8 @@
 <span class="c1">#: specify extra pandoc args used when calling convert_text</span>
 <span class="n">PANNBPANDOCARGS</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;PANNBPANDOCARGS&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">()</span>
 
+<span class="n">__version__</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;0.1.0&quot;</span>
+
 
 <div class="viewcode-block" id="convert_jupytext_metadata"><a class="viewcode-back" href="../../api/pannb/#pannb.convert_jupytext_metadata">[docs]</a><span class="k">def</span> <span class="nf">convert_jupytext_metadata</span><span class="p">(</span><span class="n">raw_block</span><span class="p">:</span> <span class="n">RawBlock</span><span class="p">,</span> <span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Overwrite doc.metadata by jupytext-style metadata.&quot;&quot;&quot;</span>
