--- a/_modules/pannb/index.html
+++ b/_modules/pannb/index.html
@@ -122,9 +122,11 @@
 <span class="kn">from</span> <span class="nn">panflute.tools</span> <span class="kn">import</span> <span class="n">convert_text</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span>
+    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Union</span>
 
-    <span class="kn">from</span> <span class="nn">panflute.base</span> <span class="kn">import</span> <span class="n">Element</span>
+    <span class="kn">from</span> <span class="nn">panflute.base</span> <span class="kn">import</span> <span class="n">Doc</span><span class="p">,</span> <span class="n">Element</span>
+
+    <span class="n">PANFLUTE_ACTION</span> <span class="o">=</span> <span class="n">Callable</span><span class="p">[[</span><span class="n">Element</span><span class="p">,</span> <span class="n">Doc</span><span class="p">],</span> <span class="n">Union</span><span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="n">Element</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="n">Element</span><span class="p">]]]</span>
 
 <span class="n">logger</span> <span class="o">=</span> <span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
@@ -244,7 +246,7 @@
 
 <span class="c1">#: A tuple of filters (functions)</span>
 <span class="c1">#: equiv. to the pannb cli, but provided as a Python interface</span>
-<span class="n">FILTERS</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Optional</span><span class="p">[</span><span class="n">Element</span><span class="p">],</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Doc</span><span class="p">]],</span> <span class="n">Union</span><span class="p">[</span><span class="n">Element</span><span class="p">,</span> <span class="nb">list</span><span class="p">,</span> <span class="kc">None</span><span class="p">]],</span> <span class="o">...</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+<span class="n">FILTERS</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
     <span class="n">walk_and_convert_jupytext_metadata</span><span class="p">,</span>
     <span class="n">convert_cell_output</span><span class="p">,</span>
     <span class="n">remove_cell_input_python</span><span class="p">,</span>
@@ -276,7 +278,7 @@
     </p>
     <p>
         &copy; Copyright 2021, Kolen Cheung.<br/>
-      Last updated on Nov 30, 2021.<br/>
+      Last updated on Dec 14, 2021.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.5.4.<br/>
     </p>
   </div>
