deploy: f2a536cc6e49f7f7a34daee7867ea082c67e141f

--- a/genindex/index.html
+++ b/genindex/index.html
@@ -118,7 +118,6 @@
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="C">C</h2>
@@ -130,15 +129,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="../api/pannb/#pannb.CONVERT_CELL_OUTPUT_PRIORITY">CONVERT_CELL_OUTPUT_PRIORITY (in module pannb)</a>
 </li>
-      <li><a href="../api/pannb/#pannb.convert_jupytext_metadata">convert_jupytext_metadata() (in module pannb)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="../api/pannb/#pannb.FILTERS">FILTERS (in module pannb)</a>
+      <li><a href="../api/pannb/#pannb.FILTER">FILTER (in module pannb)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -170,8 +167,6 @@
         <li><a href="../api/pannb/#module-pannb">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pannb.util
 
@@ -179,7 +174,13 @@
         <li><a href="../api/pannb.util/#module-pannb.util">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="../api/pannb/#pannb.PANNBPANDOCARGS">PANNBPANDOCARGS (in module pannb)</a>
+</li>
+      <li><a href="../api/pannb/#pannb.prepare">prepare() (in module pannb)</a>
+</li>
+      <li><a href="../api/pannb/#pannb.prepare_jupytext_metadata">prepare_jupytext_metadata() (in module pannb)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -200,14 +201,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="../api/pannb.util/#pannb.util.setup_logging">setup_logging() (in module pannb.util)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="../api/pannb/#pannb.walk_and_convert_jupytext_metadata">walk_and_convert_jupytext_metadata() (in module pannb)</a>
 </li>
   </ul></td>
 </tr></table>
