--- a/_modules/pannb/index.html
+++ b/_modules/pannb/index.html
@@ -114,21 +114,30 @@
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
 
 <span class="kn">import</span> <span class="nn">os</span>
-<span class="kn">from</span> <span class="nn">logging</span> <span class="kn">import</span> <span class="n">getLogger</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">TYPE_CHECKING</span>
 
 <span class="kn">from</span> <span class="nn">panflute.elements</span> <span class="kn">import</span> <span class="n">CodeBlock</span><span class="p">,</span> <span class="n">Div</span><span class="p">,</span> <span class="n">Doc</span><span class="p">,</span> <span class="n">Para</span><span class="p">,</span> <span class="n">RawBlock</span>
 <span class="kn">from</span> <span class="nn">panflute.io</span> <span class="kn">import</span> <span class="n">run_filters</span>
 <span class="kn">from</span> <span class="nn">panflute.tools</span> <span class="kn">import</span> <span class="n">convert_text</span>
 
-<span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Union</span>
+<span class="kn">from</span> <span class="nn">.util</span> <span class="kn">import</span> <span class="n">setup_logging</span>
 
-    <span class="kn">from</span> <span class="nn">panflute.base</span> <span class="kn">import</span> <span class="n">Doc</span><span class="p">,</span> <span class="n">Element</span>
+<span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
+    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Sequence</span><span class="p">,</span> <span class="n">Union</span>
+
+    <span class="kn">from</span> <span class="nn">panflute.elements</span> <span class="kn">import</span> <span class="n">CodeBlock</span><span class="p">,</span> <span class="n">Doc</span><span class="p">,</span> <span class="n">Element</span>
 
     <span class="n">PANFLUTE_ACTION</span> <span class="o">=</span> <span class="n">Callable</span><span class="p">[[</span><span class="n">Element</span><span class="p">,</span> <span class="n">Doc</span><span class="p">],</span> <span class="n">Union</span><span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="n">Element</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="n">Element</span><span class="p">]]]</span>
+    <span class="n">PANFLUTE_PREPARE</span> <span class="o">=</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Doc</span><span class="p">],</span> <span class="kc">None</span><span class="p">]]</span>
+    <span class="n">PANFLUTE_FINALIZE</span> <span class="o">=</span> <span class="n">PANFLUTE_PREPARE</span>
+    <span class="c1"># see https://panflute.readthedocs.io/en/latest/code.html?highlight=run_filters#panflute.io.run_filters</span>
+    <span class="c1"># PANFLUTE_FILTER can either be just an action, or a tuple of action, prepare, finalize</span>
+    <span class="n">PANFLUTE_FILTER</span> <span class="o">=</span> <span class="n">Union</span><span class="p">[</span>
+        <span class="n">PANFLUTE_ACTION</span><span class="p">,</span>
+        <span class="nb">tuple</span><span class="p">[</span><span class="n">Sequence</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">],</span> <span class="n">PANFLUTE_PREPARE</span><span class="p">,</span> <span class="n">PANFLUTE_FINALIZE</span><span class="p">],</span>
+    <span class="p">]</span>
 
-<span class="n">logger</span> <span class="o">=</span> <span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
+<span class="n">logger</span> <span class="o">=</span> <span class="n">setup_logging</span><span class="p">()</span>
 
 <span class="n">RAW_TEX_FORMATS</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;latex&quot;</span><span class="p">,</span> <span class="s2">&quot;textile&quot;</span><span class="p">,</span> <span class="s2">&quot;html&quot;</span><span class="p">,</span> <span class="s2">&quot;ipynb&quot;</span><span class="p">}</span>
 <span class="n">CODE_CELL_CLASSES</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;cell&quot;</span><span class="p">,</span> <span class="s2">&quot;code&quot;</span><span class="p">}</span>
@@ -144,36 +153,24 @@
 <span class="n">__version__</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;0.1.1&quot;</span>
 
 
-<div class="viewcode-block" id="convert_jupytext_metadata"><a class="viewcode-back" href="../../api/pannb/#pannb.convert_jupytext_metadata">[docs]</a><span class="k">def</span> <span class="nf">convert_jupytext_metadata</span><span class="p">(</span><span class="n">raw_block</span><span class="p">:</span> <span class="n">RawBlock</span><span class="p">,</span> <span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Overwrite doc.metadata by jupytext-style metadata.&quot;&quot;&quot;</span>
-    <span class="c1"># overwrite</span>
-    <span class="n">meta</span> <span class="o">=</span> <span class="n">convert_text</span><span class="p">(</span><span class="n">raw_block</span><span class="o">.</span><span class="n">text</span><span class="p">,</span> <span class="n">standalone</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">extra_args</span><span class="o">=</span><span class="n">PANNBPANDOCARGS</span><span class="p">)</span>
-    <span class="k">if</span> <span class="n">metadata</span> <span class="o">:=</span> <span class="n">meta</span><span class="o">.</span><span class="n">_metadata</span><span class="p">:</span>
-        <span class="n">doc</span><span class="o">.</span><span class="n">_metadata</span> <span class="o">=</span> <span class="n">metadata</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Overwritten doc metadata by jupytext&#39;s: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">doc</span><span class="o">.</span><span class="n">get_metadata</span><span class="p">())</span>
-        <span class="nb">setattr</span><span class="p">(</span><span class="n">doc</span><span class="p">,</span> <span class="s2">&quot;_walk_and_convert_jupytext_metadata_not_done&quot;</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
-        <span class="k">return</span> <span class="p">[]</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="kc">None</span></div>
-
-
-<div class="viewcode-block" id="walk_and_convert_jupytext_metadata"><a class="viewcode-back" href="../../api/pannb/#pannb.walk_and_convert_jupytext_metadata">[docs]</a><span class="k">def</span> <span class="nf">walk_and_convert_jupytext_metadata</span><span class="p">(</span>
-    <span class="n">element</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-    <span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-<span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Walk and overwrite doc.metadata by jupytext-style metadata if found.&quot;&quot;&quot;</span>
-    <span class="n">_walk_and_convert_jupytext_metadata_not_done</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">doc</span><span class="p">,</span> <span class="s2">&quot;_walk_and_convert_jupytext_metadata_not_done&quot;</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
+<div class="viewcode-block" id="prepare_jupytext_metadata"><a class="viewcode-back" href="../../api/pannb/#pannb.prepare_jupytext_metadata">[docs]</a><span class="k">def</span> <span class="nf">prepare_jupytext_metadata</span><span class="p">(</span>
+    <span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span> <span class="o">|</span> <span class="kc">None</span><span class="p">,</span>
+<span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+    <span class="sd">&quot;&quot;&quot;Replace doc metadata with jupytext metadata.&quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="p">(</span>
-        <span class="n">_walk_and_convert_jupytext_metadata_not_done</span>
-        <span class="ow">and</span> <span class="n">doc</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
-        <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">div</span> <span class="o">:=</span> <span class="n">element</span><span class="p">,</span> <span class="n">Div</span><span class="p">)</span>
+        <span class="n">doc</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
+        <span class="ow">and</span> <span class="p">(</span><span class="n">content</span> <span class="o">:=</span> <span class="n">doc</span><span class="o">.</span><span class="n">content</span><span class="p">)</span>
+        <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">div</span> <span class="o">:=</span> <span class="n">content</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">Div</span><span class="p">)</span>
         <span class="ow">and</span> <span class="nb">len</span><span class="p">(</span><span class="n">div</span><span class="o">.</span><span class="n">content</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
         <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">((</span><span class="n">raw_block</span> <span class="o">:=</span> <span class="n">div</span><span class="o">.</span><span class="n">content</span><span class="p">[</span><span class="mi">0</span><span class="p">]),</span> <span class="n">RawBlock</span><span class="p">)</span>
         <span class="ow">and</span> <span class="n">raw_block</span><span class="o">.</span><span class="n">format</span> <span class="o">==</span> <span class="s2">&quot;ipynb&quot;</span>
     <span class="p">):</span>
-        <span class="k">return</span> <span class="n">convert_jupytext_metadata</span><span class="p">(</span><span class="n">raw_block</span><span class="p">,</span> <span class="n">doc</span><span class="p">)</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="kc">None</span></div>
+        <span class="c1"># overwrite</span>
+        <span class="n">meta</span> <span class="o">=</span> <span class="n">convert_text</span><span class="p">(</span><span class="n">raw_block</span><span class="o">.</span><span class="n">text</span><span class="p">,</span> <span class="n">standalone</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">extra_args</span><span class="o">=</span><span class="n">PANNBPANDOCARGS</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">metadata</span> <span class="o">:=</span> <span class="n">meta</span><span class="o">.</span><span class="n">_metadata</span><span class="p">:</span>
+            <span class="n">doc</span><span class="o">.</span><span class="n">_metadata</span> <span class="o">=</span> <span class="n">metadata</span>
+            <span class="k">del</span> <span class="n">content</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+            <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Overwritten doc metadata by jupytext&#39;s: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">doc</span><span class="o">.</span><span class="n">get_metadata</span><span class="p">())</span></div>
 
 
 <div class="viewcode-block" id="convert_cell_output"><a class="viewcode-back" href="../../api/pannb/#pannb.convert_cell_output">[docs]</a><span class="k">def</span> <span class="nf">convert_cell_output</span><span class="p">(</span>
@@ -226,7 +223,8 @@
             <span class="n">identifier</span><span class="o">=</span><span class="n">element</span><span class="o">.</span><span class="n">identifier</span><span class="p">,</span>
             <span class="n">classes</span><span class="o">=</span><span class="p">[</span><span class="bp">cls</span> <span class="k">for</span> <span class="bp">cls</span> <span class="ow">in</span> <span class="n">element</span><span class="o">.</span><span class="n">classes</span> <span class="k">if</span> <span class="bp">cls</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">CODE_CELL_CLASSES</span><span class="p">],</span>
             <span class="n">attributes</span><span class="o">=</span><span class="n">element</span><span class="o">.</span><span class="n">attributes</span><span class="p">,</span>
-        <span class="p">)</span></div>
+        <span class="p">)</span>
+    <span class="k">return</span> <span class="kc">None</span></div>
 
 
 <div class="viewcode-block" id="remove_cell_input_python"><a class="viewcode-back" href="../../api/pannb/#pannb.remove_cell_input_python">[docs]</a><span class="k">def</span> <span class="nf">remove_cell_input_python</span><span class="p">(</span>
@@ -244,14 +242,15 @@
         <span class="k">return</span> <span class="kc">None</span></div>
 
 
-<span class="c1">#: A tuple of filters (functions)</span>
-<span class="c1">#: equiv. to the pannb cli, but provided as a Python interface</span>
-<span class="n">FILTERS</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
-    <span class="n">walk_and_convert_jupytext_metadata</span><span class="p">,</span>
+<span class="n">actions</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
     <span class="n">convert_cell_output</span><span class="p">,</span>
     <span class="n">remove_cell_input_python</span><span class="p">,</span>
     <span class="n">remove_code_cell_classes</span><span class="p">,</span>
-<span class="p">)</span>
+<span class="p">)</span>  <span class="c1"># type: ignore[assignment] # type limitation</span>
+<span class="n">prepare</span><span class="p">:</span> <span class="n">PANFLUTE_PREPARE</span> <span class="o">=</span> <span class="n">prepare_jupytext_metadata</span>
+<span class="n">finalize</span><span class="p">:</span> <span class="n">PANFLUTE_FINALIZE</span> <span class="o">=</span> <span class="kc">None</span>
+<span class="c1">#: equiv. to the texp cli, but provided as a Python interface</span>
+<span class="n">FILTER</span><span class="p">:</span> <span class="n">PANFLUTE_FILTER</span> <span class="o">=</span> <span class="p">(</span><span class="n">actions</span><span class="p">,</span> <span class="n">prepare</span><span class="p">,</span> <span class="n">finalize</span><span class="p">)</span>
 
 
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../../api/pannb/#pannb.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
@@ -259,7 +258,7 @@
 
 <span class="sd">    Fenced code block with class math will be runned using texp.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="n">run_filters</span><span class="p">(</span><span class="n">FILTERS</span><span class="p">,</span> <span class="n">doc</span><span class="o">=</span><span class="n">doc</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="n">run_filters</span><span class="p">(</span><span class="n">actions</span><span class="p">,</span> <span class="n">prepare</span><span class="o">=</span><span class="n">prepare</span><span class="p">,</span> <span class="n">finalize</span><span class="o">=</span><span class="n">finalize</span><span class="p">,</span> <span class="n">doc</span><span class="o">=</span><span class="n">doc</span><span class="p">)</span></div>
 
 
 <span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s2">&quot;__main__&quot;</span><span class="p">:</span>
