--- a/_modules/pannb/index.html
+++ b/_modules/pannb/index.html
@@ -123,19 +123,9 @@
 <span class="kn">from</span> <span class="nn">.util</span> <span class="kn">import</span> <span class="n">setup_logging</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Sequence</span><span class="p">,</span> <span class="n">Union</span>
+    <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span>
 
-    <span class="kn">from</span> <span class="nn">panflute.elements</span> <span class="kn">import</span> <span class="n">CodeBlock</span><span class="p">,</span> <span class="n">Doc</span><span class="p">,</span> <span class="n">Element</span>
-
-    <span class="n">PANFLUTE_ACTION</span> <span class="o">=</span> <span class="n">Callable</span><span class="p">[[</span><span class="n">Element</span><span class="p">,</span> <span class="n">Doc</span><span class="p">],</span> <span class="n">Union</span><span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="n">Element</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="n">Element</span><span class="p">]]]</span>
-    <span class="n">PANFLUTE_PREPARE</span> <span class="o">=</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Doc</span><span class="p">],</span> <span class="kc">None</span><span class="p">]]</span>
-    <span class="n">PANFLUTE_FINALIZE</span> <span class="o">=</span> <span class="n">PANFLUTE_PREPARE</span>
-    <span class="c1"># see https://panflute.readthedocs.io/en/latest/code.html?highlight=run_filters#panflute.io.run_filters</span>
-    <span class="c1"># PANFLUTE_FILTER can either be just an action, or a tuple of action, prepare, finalize</span>
-    <span class="n">PANFLUTE_FILTER</span> <span class="o">=</span> <span class="n">Union</span><span class="p">[</span>
-        <span class="n">PANFLUTE_ACTION</span><span class="p">,</span>
-        <span class="nb">tuple</span><span class="p">[</span><span class="n">Sequence</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">],</span> <span class="n">PANFLUTE_PREPARE</span><span class="p">,</span> <span class="n">PANFLUTE_FINALIZE</span><span class="p">],</span>
-    <span class="p">]</span>
+    <span class="kn">from</span> <span class="nn">panflute.elements</span> <span class="kn">import</span> <span class="n">CodeBlock</span><span class="p">,</span> <span class="n">Doc</span>
 
 <span class="n">logger</span> <span class="o">=</span> <span class="n">setup_logging</span><span class="p">()</span>
 
@@ -242,23 +232,20 @@
         <span class="k">return</span> <span class="kc">None</span></div>
 
 
-<span class="n">actions</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="n">PANFLUTE_ACTION</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
-    <span class="n">convert_cell_output</span><span class="p">,</span>
-    <span class="n">remove_cell_input_python</span><span class="p">,</span>
-    <span class="n">remove_code_cell_classes</span><span class="p">,</span>
-<span class="p">)</span>  <span class="c1"># type: ignore[assignment] # type limitation</span>
-<span class="n">prepare</span><span class="p">:</span> <span class="n">PANFLUTE_PREPARE</span> <span class="o">=</span> <span class="n">prepare_jupytext_metadata</span>
-<span class="n">finalize</span><span class="p">:</span> <span class="n">PANFLUTE_FINALIZE</span> <span class="o">=</span> <span class="kc">None</span>
-<span class="c1">#: equiv. to the texp cli, but provided as a Python interface</span>
-<span class="n">FILTER</span><span class="p">:</span> <span class="n">PANFLUTE_FILTER</span> <span class="o">=</span> <span class="p">(</span><span class="n">actions</span><span class="p">,</span> <span class="n">prepare</span><span class="p">,</span> <span class="n">finalize</span><span class="p">)</span>
-
-
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../../api/pannb/#pannb.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">doc</span><span class="p">:</span> <span class="n">Doc</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;a pandoc filter converting math in code block.</span>
 
 <span class="sd">    Fenced code block with class math will be runned using texp.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="n">run_filters</span><span class="p">(</span><span class="n">actions</span><span class="p">,</span> <span class="n">prepare</span><span class="o">=</span><span class="n">prepare</span><span class="p">,</span> <span class="n">finalize</span><span class="o">=</span><span class="n">finalize</span><span class="p">,</span> <span class="n">doc</span><span class="o">=</span><span class="n">doc</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="n">run_filters</span><span class="p">(</span>
+        <span class="p">(</span>
+            <span class="n">convert_cell_output</span><span class="p">,</span>
+            <span class="n">remove_cell_input_python</span><span class="p">,</span>
+            <span class="n">remove_code_cell_classes</span><span class="p">,</span>
+        <span class="p">),</span>
+        <span class="n">prepare</span><span class="o">=</span><span class="n">prepare_jupytext_metadata</span><span class="p">,</span>
+        <span class="n">doc</span><span class="o">=</span><span class="n">doc</span><span class="p">,</span>
+    <span class="p">)</span></div>
 
 
 <span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s2">&quot;__main__&quot;</span><span class="p">:</span>
@@ -277,7 +264,7 @@
     </p>
     <p>
         &copy; Copyright 2021, Kolen Cheung.<br/>
-      Last updated on Dec 14, 2021.<br/>
+      Last updated on Dec 18, 2021.<br/>
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.5.4.<br/>
     </p>
   </div>
